...
    <string name="error_link_message">"ERROR: Invalid link. Please check the URL and try again."</string>
    <string name="link_label">Link*</string>
    <string name="start_date_label">Start date</string>
    <string name="end_date_label">End date</string>
    <string name="example_url_placeholder">e.g. https://</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="qr_or_password_required">QR code badge or password required</string>
    <string name="password_not_set_error">Password is required before saving</string>
    <string name="done">Done</string>
    <string name="try_it">Try it</string>
    <string name="add_app">Add to school apps</string>
    <string name="google_play">Get it on Google Play</string>
    <string name="lessons">Lessons</string>
    <string name="apps">Apps</string>
    <string name="home">Home</string>
    <string name="app">App</string>
    <string name="assignments">Assignments</string>
    <string name="assignment">Assignment</string>
    <string name="add_assignment">Add assignment</string>
    <string name="edit_assignment">Edit assignment</string>
    <string name="classes">Classes</string>
    <string name="clazz">Class</string>
    <string name="assigned_to">Assigned to</string>
    <string name="assign_to">Assign to</string>
    <string name="remove_from_class">Remove from class</string>
    <string name="manage_enrollments">Manage enrollments</string>
    <string name="report">Report</string>
...
    <string name="enter_code_label">Enter invite code</string>
    <string name="invalid_invite_code">Invalid code, try again</string>
    <string name="already_have_account">I already have an account</string>
    <string name="add_my_school">Add my school</string>
    <string name="required_field">Required field</string>
    <string name="enter_one_field">If you need response, one of the field is required</string>
    <string name="login">Login</string>
    <string name="userId_placeholder">user@school.example.org</string>
    <string name="password_label">Password</string>

    <string name="qr_badge_options">QR Badge Options</string>
    <string name="assign_new_badge_replace">Assign new badge (replace)</string>
    <string name="revoke_badge">Revoke badge</string>
...
    <string name="waiting_for_approval_to_join">Waiting for approval to join %1$s</string>
    <string name="refresh">Refresh</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender">Gender</string>
    <string name="teachers">Teachers</string>
    <string name="students">Students</string>
    <string name="add_teacher">Add Teacher</string>">
    <string name="add_student">Add Student</string>">
    <string name="accept_invite">Accept Invite</string>">
    <string name="dismiss_invite">Dismiss invite</string>
    <string name="pending_requests">Pending requests</string>">
    <string name="pending_requests_to_join">Pending request to join</string>">
    <string name="copy_invite_code">Copy invite code : </string>">
    <string name="share_with_link_or_qr_code">Invite with link or QR code</string>">
    <string name="share_qr_code">Share QR code</string>">
    <string name="description">Description</string>">
    <string name="unspecified">Unspecified</string>
    <string name="phone_memory">Phone memory</string>
    <string name="memory_card">Memory card</string>
    <string name="select_picture_from_gallery">Select picture from gallery</string>
    <string name="select_picture_from_files">Select picture from files</string>
    <string name="take_new_photo_from_camera">Take new photo from camera</string>
...
    <string name="shared_device_login_title">Enter Roll Number</string>
    <string name="last_name">Last name</string>"
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="sort_by">Sort by</string>
    <string name="edit">Edit</string>
    <string name="edit_clazz">Edit class</string>
    <string name="add_clazz">Add class</string>
    <string name="settings">Settings</string>
    <string name="select_class">Select Class</string>
    <string name="select_student">Select Student</string>
    <string name="enter_roll_number">Enter Roll Number</string>
    <string name="shared_device_setting">Shared device setting</string>
    <string name="scan_qr_code">Scan QR code badge</string>
    <string name="teacher_admin_login">Teacher or admin login</string>
...
    <string name="category_rate_us">Rate us</string>
    <string name="category_other">Other</string>
    <string name="error_message">Error: try again</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>

    <string name="get_started">Get Started</string>
    <string name="onboardingTitle1">Digital Library of Edtech Apps</string>
    <string name="onboardingTitle2">Works Offline and Saves Data</string>
    <string name="onboardingTitle3">Assignments</string>
    <string name="onboardingTitle4">Data Reporting</string>

    <string name="onboardingDescription1">RESPECT™ makes it easy to discover and use great edtech apps with a single account.</string>
...
    <string name="assessment_type">Assessment Type (Self/Assignment)</string>


    <!-- Demographic Dimensions -->
    <string name="age_group">Age Group</string>
    <string name="region">Region</string>
    <string name="language">Language</string>

    <!-- Role-Based Dimensions -->
    <string name="activity_verb">Activity Verb</string>
    <string name="user_role">Role (Teacher/Student/Parent)</string>

    <!-- Technical Dimensions -->
...
    <!-- Chart Types -->
    <string name="bar_chart">Bar Chart</string>
    <string name="line_chart">Line Chart</string>

    <!-- X Axis Options -->
    <string name="year">Year</string>
    <string name="class_name">Class name</string>
    <string name="gender_literal">Gender</string>

    <!-- Time Units -->
    <string name="hour_unit">hr</string>
    <string name="minute_unit">min</string>
    <string name="second_unit">sec</string>
...
    <string name="raw_statement">Raw statement</string>

    <string name="duration_hours_short">h</string>
    <string name="duration_minutes_short">m</string>
    <string name="duration_seconds_short">s</string>

    <string name="invalid_username_password">Invalid username/password</string>
    <string name="network_error_check_try_again">Network error: check your connection and try again</string>

    <string name="not_found">Not found</string>
    <string name="license">License</string>
    <string name="clock_icon">Clock</string>

...
