
package world.respect.shared.domain.applanguage

object RespectMobileConstants {

    val LANGUAGE_NAMES = mapOf(
        "en" to "English",
        "tg" to "Тоҷикӣ",
        "ps" to "\u067e\u069a\u062a\u0648",
        "fa" to "\u062f\u0631\u06cc",
        "ar" to "العربية",
        "bn" to "বাংলা",
        "ne" to "नेपाली",
        "my" to "မြန်မာစာ",
        "ru" to "Русский",
        "rw" to "Kinyarwanda",
        "hi" to "हिन्दी",
    )
}
