appId: world.respect.app
onFlowStart:
  - clearState: world.respect.app
  - runScript:
      file: "subflows/school_init.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
        SCHOOL_ADMIN_PASSWORD: ${SCHOOL_ADMIN_PASSWORD}
        DIR_ADMIN_AUTH_HEADER: ${DIR_ADMIN_AUTH_HEADER}
        SCHOOL_URL: ${SCHOOL_URL}
        SCHOOL_NAME: ${SCHOOL_NAME}
        URL_SUBSTITUTION: ${URL_SUBSTITUTION}
        NAME: "003_001_create_classes_test"

onFlowComplete:
  - runScript:
      file: "subflows/teardown.js"
---
- runFlow: "subflows/school_admin_login_flow.yaml"

- tapOn: "Classes"
- assertVisible:
    id: "app_title"
    text: "Classes"
- tapOn:
    id: "floating_action_button"   #  +Class button
- assertVisible:
    id: "app_title"
    text: "Add class"
- tapOn: "Class name"
- inputText: "New Class"
- tapOn: "Description"
- inputText: "New Course Description"
- tapOn: "Save"
- assertVisible:
    id: "app_title"
    text: "New Class"
- tapOn:
    id: "floating_action_button"   # Edit button
- assertVisible:
    id: "app_title"
    text: "Edit class"
- tapOn: "New Class"
- eraseText
- inputText: "New Class Edited"
- tapOn: "Save"
- assertVisible: "New Class Edited"
- tapOn: "New Class Edited"
- assertVisible: "Description"
- assertVisible: "Teachers"
- assertVisible: "Add teacher"
- assertVisible: "Students"
- assertVisible: "Add student"





