appId: world.respect.app
onFlowStart:
  - clearState: world.respect.app
  - runScript:
      file: "subflows/school_init.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
        SCHOOL_ADMIN_PASSWORD: ${SCHOOL_ADMIN_PASSWORD}
        DIR_ADMIN_AUTH_HEADER: ${DIR_ADMIN_AUTH_HEADER}
        SCHOOL_URL: ${SCHOOL_URL}
        SCHOOL_NAME: ${SCHOOL_NAME}
---
- runFlow: "subflows/school_admin_login_flow.yaml"

- tapOn: "Classes"
- assertVisible:
    id: "app_title"
    text: "Classes"
- tapOn:
    id: "floating_action_button"   #  +Class button
- assertVisible:
    id: "app_title"
    text: "Add class"
- tapOn: "Class name"
- inputText: "New Class"
- tapOn: "Description"
- inputText: "New Course Description"
#- tapOn: "Start date"
#- runScript:
#      file: "subflows/setDate.js"
#- inputText: ${output.yesterdayDate}
#- tapOn: "End date"
#- runScript:
#      file: "subflows/setDate.js"
#- inputText: ${output.tomorrowDate}
- tapOn: "Save"
#- assertVisible:
#    id: "app_title"
#    text: "Classes"
#- assertVisible: "New Class"
#- tapOn: "New Class"
- assertVisible:
    id: "app_title"
    text: "New Class"
- tapOn:
    id: "floating_action_button"   # Edit button
- assertVisible:
    id: "app_title"
    text: "Edit class"
- tapOn: "New Class"
- eraseText
- inputText: "New Class Edited"
- tapOn: "Save"
#- assertVisible:
#      id: "app_title"
#      text: "Classes"
- assertVisible: "New Class Edited"
- tapOn: "New Class Edited"
- assertVisible: "Description"
#- assertVisible: "New Course Description"
#- assertVisible: "Start date"
#- assertVisible: "End date"

- assertVisible: "Teachers"
- assertVisible: "Add teacher"
- assertVisible: "Students"
- assertVisible: "Add student"





